[project]
name = "vault-fix"
version = "1.0.0"
description = "Tool for importing and exporting vault fixture files"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Chris Snijder", email = "github@chrissnijder.nl" }]
dependencies = [
    "cryptography==41.0.0",
    "hvac==1.1.0",
    "pyyaml==6.0",
    "rich==13.5.2",
    "toml==0.10.2",
    "typer[all]==0.9.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "black==23.3.0",
    "coverage==7.2.7",
    "pip-tools==7.1.0",
    "pytest==7.3.2",
    "pytest-asyncio==0.21.0",
    "pytest-cov==4.0.0",
    "pytest-random-order==1.1.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
target-version = ["py311"]
line-length = 120

[tool.mypy]
plugins = ["pydantic.mypy"]

check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
follow_imports = "silent"
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.coverage.run]
source_pkgs = ["core", "tests"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100

[project.scripts]
vault-fix = "core.__main__:app"
